Licence/langcompil/mvap/Compil-03-24-14_21/CalculetteParser.java
// Generated from Calculette.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculetteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, TYPE=33, NEWLINE=34, WS=35, ENTIER=36, MULTICOMMENTAIRE=37, 
		SINGLECOMMENTAIRE=38, IDENTIFIANT=39, UNMATCH=40;
	public static final int
		RULE_start = 0, RULE_calcul = 1, RULE_instruction = 2, RULE_fonction = 3, 
		RULE_params = 4, RULE_args = 5, RULE_expression = 6, RULE_finInstruction = 7, 
		RULE_decl = 8, RULE_assignation = 9, RULE_condition = 10, RULE_bloc = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "calcul", "instruction", "fonction", "params", "args", "expression", 
			"finInstruction", "decl", "assignation", "condition", "bloc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'read'", "'('", "')'", "'write'", "'while'", "'if'", "'else'", 
			"'for'", "';'", "'repeat'", "'until'", "','", "'*'", "'/'", "'+'", "'-'", 
			"'='", "'++'", "'true'", "'false'", "'=='", "'!='", "'<>'", "'<='", "'>='", 
			"'<'", "'>'", "'&&'", "'||'", "'!'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "TYPE", "NEWLINE", 
			"WS", "ENTIER", "MULTICOMMENTAIRE", "SINGLECOMMENTAIRE", "IDENTIFIANT", 
			"UNMATCH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculette.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	   private TableSymboles tableSymboles = new TableSymboles();
	   private int _cur_label = 1;
	    /** générateur de nom d'étiquettes pour les boucles */
	    private String getNewLabel() { return "b" +(_cur_label++); }

	public CalculetteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public CalculContext calcul() {
			return getRuleContext(CalculContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CalculetteParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			calcul();
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalculContext extends ParserRuleContext {
		public String code;
		public DeclContext decl;
		public InstructionContext instruction;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CalculContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterCalcul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitCalcul(this);
		}
	}

	public final CalculContext calcul() throws RecognitionException {
		CalculContext _localctx = new CalculContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_calcul);
		 ((CalculContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(27);
				((CalculContext)_localctx).decl = decl();
				 _localctx.code += ((CalculContext)_localctx).decl.code; 
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(35);
					match(NEWLINE);
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__15) | (1L << NEWLINE) | (1L << ENTIER) | (1L << IDENTIFIANT))) != 0)) {
				{
				{
				setState(41);
				((CalculContext)_localctx).instruction = instruction();
				 _localctx.code += ((CalculContext)_localctx).instruction.code; 
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 _localctx.code += "HALT\n"; 
			}
			_ctx.stop = _input.LT(-1);
			System.out.print(_localctx.code);
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public String code;
		public ExpressionContext expression;
		public AssignationContext assignation;
		public Token IDENTIFIANT;
		public ConditionContext condition;
		public InstructionContext instruction;
		public BlocContext bloc;
		public AssignationContext init;
		public ConditionContext c;
		public AssignationContext incr;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FinInstructionContext finInstruction() {
			return getRuleContext(FinInstructionContext.class,0);
		}
		public List<AssignationContext> assignation() {
			return getRuleContexts(AssignationContext.class);
		}
		public AssignationContext assignation(int i) {
			return getRuleContext(AssignationContext.class,i);
		}
		public TerminalNode IDENTIFIANT() { return getToken(CalculetteParser.IDENTIFIANT, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		 ((InstructionContext)_localctx).code =  new String();
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				((InstructionContext)_localctx).expression = expression(0);
				setState(52);
				finInstruction();
				 
				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code;
				        
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((InstructionContext)_localctx).assignation = assignation();
				setState(56);
				finInstruction();
				 
							((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).assignation.code;
				        
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(T__0);
				setState(60);
				match(T__1);
				setState(61);
				((InstructionContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
				setState(62);
				match(T__2);
				setState(63);
				finInstruction();

							((InstructionContext)_localctx).code =  "READ\n" + "STOREG " + tableSymboles.getAdresseType((((InstructionContext)_localctx).IDENTIFIANT!=null?((InstructionContext)_localctx).IDENTIFIANT.getText():null)).adresse + "\n";
						
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(T__3);
				setState(67);
				match(T__1);
				setState(68);
				((InstructionContext)_localctx).expression = expression(0);
				setState(69);
				match(T__2);
				setState(70);
				finInstruction();

							((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code + "WRITE\n" + "POP\n";
						
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				match(T__4);
				setState(74);
				match(T__1);
				setState(75);
				((InstructionContext)_localctx).condition = condition(0);
				setState(76);
				match(T__2);
				String i="";
				setState(84);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__3:
				case T__4:
				case T__5:
				case T__7:
				case T__8:
				case T__9:
				case T__15:
				case NEWLINE:
				case ENTIER:
				case IDENTIFIANT:
					{
					setState(78);
					((InstructionContext)_localctx).instruction = instruction();
					i+=((InstructionContext)_localctx).instruction.code;
					}
					break;
				case T__30:
					{
					setState(81);
					((InstructionContext)_localctx).bloc = bloc();
					i+=((InstructionContext)_localctx).bloc.code;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}

							String debut = getNewLabel();
							String fin = getNewLabel();
							((InstructionContext)_localctx).code =  "LABEL " + debut + "\n" + ((InstructionContext)_localctx).condition.code + "JUMPF " + fin + "\n";
							_localctx.code += i;
							_localctx.code += "JUMP " + debut + "\n" + "LABEL " + fin + "\n";
						
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				match(T__5);
				setState(89);
				match(T__1);
				setState(90);
				((InstructionContext)_localctx).condition = condition(0);
				setState(91);
				match(T__2);
				String bthen="";String belse="";
				setState(99);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__3:
				case T__4:
				case T__5:
				case T__7:
				case T__8:
				case T__9:
				case T__15:
				case NEWLINE:
				case ENTIER:
				case IDENTIFIANT:
					{
					setState(93);
					((InstructionContext)_localctx).instruction = instruction();
					bthen+=((InstructionContext)_localctx).instruction.code;
					}
					break;
				case T__30:
					{
					setState(96);
					((InstructionContext)_localctx).bloc = bloc();
					bthen+=((InstructionContext)_localctx).bloc.code;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(101);
					match(T__6);
					setState(108);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
					case T__1:
					case T__3:
					case T__4:
					case T__5:
					case T__7:
					case T__8:
					case T__9:
					case T__15:
					case NEWLINE:
					case ENTIER:
					case IDENTIFIANT:
						{
						setState(102);
						((InstructionContext)_localctx).instruction = instruction();
						belse+=((InstructionContext)_localctx).instruction.code;
						}
						break;
					case T__30:
						{
						setState(105);
						((InstructionContext)_localctx).bloc = bloc();
						belse+=((InstructionContext)_localctx).bloc.code;
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					((InstructionContext)_localctx).code = "ok";
					}
					break;
				}

							String fin = getNewLabel();			
							if(_localctx.code.equals("")){
								((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).condition.code + "JUMPF " + fin + "\n" + bthen + "LABEL " + fin + "\n";					
							}
							else {
								String sinon = getNewLabel();
								((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).condition.code + "JUMPF " + sinon + "\n" + bthen + "JUMP " + fin + "\nLABEL " + sinon + "\n" + belse + "LABEL " + fin + "\n";
							}
						
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				match(T__7);
				setState(117);
				match(T__1);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIANT) {
					{
					setState(118);
					((InstructionContext)_localctx).init = assignation();
					}
				}

				setState(121);
				match(T__8);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__15) | (1L << T__18) | (1L << T__19) | (1L << T__29) | (1L << ENTIER) | (1L << IDENTIFIANT))) != 0)) {
					{
					setState(122);
					((InstructionContext)_localctx).c = condition(0);
					}
				}

				setState(125);
				match(T__8);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIANT) {
					{
					setState(126);
					((InstructionContext)_localctx).incr = assignation();
					}
				}

				setState(129);
				match(T__2);
				String i="";
				setState(137);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__3:
				case T__4:
				case T__5:
				case T__7:
				case T__8:
				case T__9:
				case T__15:
				case NEWLINE:
				case ENTIER:
				case IDENTIFIANT:
					{
					setState(131);
					((InstructionContext)_localctx).instruction = instruction();
					i+=((InstructionContext)_localctx).instruction.code;
					}
					break;
				case T__30:
					{
					setState(134);
					((InstructionContext)_localctx).bloc = bloc();
					i+=((InstructionContext)_localctx).bloc.code;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}

							String debut = getNewLabel();
							String fin = getNewLabel();
							((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).init.code + "LABEL " + debut + "\n";
							_localctx.code += ((InstructionContext)_localctx).c.code + "JUMPF " + fin + "\n";
							_localctx.code += i + ((InstructionContext)_localctx).incr.code + "JUMP " + debut + "\n" + "LABEL " + fin + "\n";
						
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				match(T__9);
				String i="";
				setState(149);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__3:
				case T__4:
				case T__5:
				case T__7:
				case T__8:
				case T__9:
				case T__15:
				case NEWLINE:
				case ENTIER:
				case IDENTIFIANT:
					{
					setState(143);
					((InstructionContext)_localctx).instruction = instruction();
					i+=((InstructionContext)_localctx).instruction.code;
					}
					break;
				case T__30:
					{
					setState(146);
					((InstructionContext)_localctx).bloc = bloc();
					i+=((InstructionContext)_localctx).bloc.code;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(151);
				match(T__10);
				setState(152);
				match(T__1);
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__15) | (1L << T__18) | (1L << T__19) | (1L << T__29) | (1L << ENTIER) | (1L << IDENTIFIANT))) != 0)) {
					{
					setState(153);
					((InstructionContext)_localctx).c = condition(0);
					}
				}

				setState(156);
				match(T__2);
				setState(157);
				finInstruction();

							String debut = getNewLabel();
							((InstructionContext)_localctx).code =  "LABEL " + debut + "\n" + i + ((InstructionContext)_localctx).c.code + "JUMPF " + debut + "\n";
						
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(160);
				finInstruction();

				            ((InstructionContext)_localctx).code =  "";
				        
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FonctionContext extends ParserRuleContext {
		public String code;
		public BlocContext bloc;
		public TerminalNode TYPE() { return getToken(CalculetteParser.TYPE, 0); }
		public TerminalNode IDENTIFIANT() { return getToken(CalculetteParser.IDENTIFIANT, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FonctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fonction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterFonction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitFonction(this);
		}
	}

	public final FonctionContext fonction() throws RecognitionException {
		FonctionContext _localctx = new FonctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fonction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(TYPE);
			setState(166);
			match(IDENTIFIANT);
			setState(167);
			match(T__1);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(168);
				params();
				}
			}

			setState(171);
			match(T__2);
			 
			            // truc à faire par rapport au "type" de la fonction
			        
			setState(173);
			((FonctionContext)_localctx).bloc = bloc();

			            _localctx.code += ((FonctionContext)_localctx).bloc.code;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<TerminalNode> TYPE() { return getTokens(CalculetteParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(CalculetteParser.TYPE, i);
		}
		public List<TerminalNode> IDENTIFIANT() { return getTokens(CalculetteParser.IDENTIFIANT); }
		public TerminalNode IDENTIFIANT(int i) {
			return getToken(CalculetteParser.IDENTIFIANT, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(TYPE);
			setState(177);
			match(IDENTIFIANT);
			 
			            // code java gérant la déclaration de "la variable" de retour de la fonction
			        
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(179);
				match(T__11);
				setState(180);
				match(TYPE);
				setState(181);
				match(IDENTIFIANT);
				 
				                // code java gérant une variable locale (argi)
				            
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public String code;
		public int size;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitArgs(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_args);
		 ((ArgsContext)_localctx).code =  new String(); ((ArgsContext)_localctx).size =  0; 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__15) | (1L << ENTIER) | (1L << IDENTIFIANT))) != 0)) {
				{
				setState(188);
				expression(0);
				 
				        // code java pour première expression pour arg
				    
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(190);
					match(T__11);
					setState(191);
					expression(0);
					 
					        // code java pour expression suivante pour arg
					    
					}
					}
					setState(198);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
